- Restored create account backend implementation (Cletussssssss!) - Added background blur to body bg image - Removed redundant js code from forms

--- a/templates/add.html
+++ b/templates/add.html
@@ -27,9 +27,11 @@
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;   /* ensures full coverage */
+  backdrop-filter: blur(3px);
+  -webkit-backdrop-filter: blur(3px);
+
 }
     main {
-      background: url("{{ url_for('static', filename='images/it.webp') }}") no-repeat center center/cover;
       backdrop-filter: blur(3px);
       -webkit-backdrop-filter: blur(3px);
       padding: 2rem;
@@ -41,6 +43,7 @@
       border-radius: 30px;
       border: 1px solid rgba(255,255,255,0.2);
       position: relative;
+      background-color: white;
     }
 
     h1 { color: #2B49F3; font-size: 2rem; line-height: 1.2; margin-bottom: 2rem; }
