Fixed main layout

--- a/templates/create_account.html
+++ b/templates/create_account.html
@@ -193,10 +193,10 @@ input[type="password"]:focus {
     <form id="usernameForm" method="post" aria-label="Username Form">
       <div class="form-group">
         <!--added the link to the home page in line 155-->
-        <label for="fullname">Enter your username:</label>
+        <label for="fullname">Enter your fullname:</label>
         <input type="text" id="username" name="fullname" placeholder="John Doe" />
 
-        <label for="username">Enter your username:</label>
+        <label for="username">Enter your userId:</label>
         <input type="text" id="username" name="username" required placeholder="johndoe" aria-describedby="usernameError" />
 
         <label for="password">Enter your password:</label>
