new-chnges-added

--- a/templates/create_account.html
+++ b/templates/create_account.html
@@ -205,7 +205,7 @@ input[type="password"]:focus {
         <label for="fullname">Enter your full name:</label>
         <input type="text" id="username" name="fullname" placeholder="John Doe" />
 
-        <label for="username">Enter your userId:</label>
+        <label for="username">Enter your user Name:</label>
         <input type="text" id="username" name="username" required placeholder="johndoe" aria-describedby="usernameError" />
 
         <label for="password">Enter your password:</label>
