--- a/templates/index.html
+++ b/templates/index.html
@@ -198,7 +198,7 @@ input[type="password"]:focus {
 
       <div class="form-group">
         <!--added the link to the home page in line 155-->
-        <label for="username">Enter your userId:</label>
+        <label for="username">Enter your user Name:</label>
         <input type="text" id="username" name="username" placeholder="johndoe" required/>
 
         <label for="password">Enter your password:</label>
